Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16690

node hang due to conflicting inserts into foreign key child table

    XMLWordPrintable

Details

    Description

      Cluster node may enter in unresolved conflict state when there are two inserts, with same primary key, into a table which has foreign key constraint for a parent table. These inserts must be issued in separate cluster nodes, and there has to be simultaneous writes (updates or deletes), for the referenced parent row.
      As a result of such scenario, replication applier thread may end in unresolved conflict state, And error log will be filled by messages of type:

      "WSREP: BF lock wait long"

      followed by InnoDB monitor outputs

      Attachments

        Issue Links

          Activity

            People

              marko Marko Mäkelä
              seppo Seppo Jaakola
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 10d 1h
                  10d 1h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.