MDEV-16690 node hang due to conflicting inserts in FK child table

This patch contains a mtr test for reproducing the issue with duplicate
inserts in FK child table, when common parent row is locked
The test will run both as plain SQL staments and prepared statements,
both variants make the issue surface in troubled code.

Changes in row0ins.cc constitutes the actual fix. The problem was that
InnoDB can blindly overwrite error codes, actually in many places.
In this case, if insert for child table had to suspend due to lock wait,
and at the same time, high priority slave thread had canceled the insert
execution, the insert transactions error_state (DB_DEADLOCK) was overwritten
with DB_LOCK_WAIT (i.e. no error). This silenced the high priority abort
and slave thread remained hanging for the lock wait.
Testing with this test load shows that similar overwrite, happens also
for error code DB_INTERRUPTED. Overwriting DB_LOCK_WAIT with DB_INTERRUPTED
does not hurt this test execution, but it may be the root cause for some
other issue.